--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,21 +2,16 @@ FROM python:3.9-slim
 
 WORKDIR /app
 
-
 COPY requirements.txt .
 
-
 RUN pip install --no-cache-dir -r requirements.txt
-
 
 COPY . .
 
 ENV PYTHONDONTWRITEBYTECODE=1
 ENV PYTHONUNBUFFERED=1
-ENV PORT=8080
-
+ENV PORT=80800
 
 EXPOSE ${PORT}
 
-CMD uvicorn main:app --host 0.0.0.0 --port ${PORT}
-
+CMD ["python", "main.py"]
