--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -11,4 +11,8 @@ COPY . .
 ENV PYTHONDONTWRITEBYTECODE=1
 ENV PYTHONUNBUFFERED=1
 
-CMD uvicorn main:app
+ENV PORT=80800
+
+EXPOSE ${PORT}
+
+CMD uvicorn main:app --host 0.0.0.0 --port ${PORT}
